# BoFunComplexity

./: .gitignore  BoFunComplexity.bib  BoFunComplexity.cabal  LICENSE  README.md
.github/workflows/: haskell-ci.yml
Haskell/: Algor.hs  All.hs  AllProp.hs  BoFun.hs  BoFunComplexity.cabal  Cardinality.hs  Main.hs  Maj3_3.hs  Memo.hs  PiecewisePoly.hs  PolyCmp.hs  PolynomialExtra.hs  README.md  Thin.hs  Threshold.hs  Util.hs  log.org
Haskell/.github/workflows/: haskell-ci.yml
Haskell/BDD/: Examples.hs  Ordering.hs
Haskell/DSLsofMath/: Algebra.hs  PSDS.lhs
Haskell/WiHu/: LevelP.hs
Mathematica/: Illustrations.nb  README.md  bimodal.nb  iterated_maj.nb
plots/: pw3_2.eps  pw3_3.eps
