cabal-version:       >=1.10
name:                BoFunComplexity
version:             0.9.0.0
synopsis:            Computing Level-p-complexity of Boolean functions (with Haskell)
description:
  Open GitHub repository with Haskell source code accompanying the pre-print "Level-p-complexity of Boolean Functions using Thinning, Memoization, and Polynomials".
homepage:            https://github.com/juliajansson/BoFunComplexity
license:             BSD3
license-file:        LICENSE
author:              Patrik Jansson and Julia Jansson
maintainer:          julia.jansson@gmail.com

category:            Math
build-type:          Simple
extra-source-files:  README.md
tested-with: GHC==9.0.2

library
  exposed-modules:     BDD.Examples, BDD.Ordering, PolyCmp, Algor, Thin, Memo, All, AllProp
  other-modules:       DSLsofMath.Algebra, DSLsofMath.FunExp, DSLsofMath.PSDS
  other-extensions:    ScopedTypeVariables, UndecidableInstances, FlexibleContexts, FlexibleInstances, TypeSynonymInstances, GADTs
  build-depends:       base >=4.13 && <4.17,
                       containers >= 0.6.2.1,
                       decision-diagrams >=0.2,
                       size-based >= 0.1.3.0,
                       memoize >= 1.1,
                       QuickCheck
  hs-source-dirs:      Haskell
  default-language:    Haskell2010
